fix: style updates
fix scrollbar colors

--- a/static/styles/twodsix.css
+++ b/static/styles/twodsix.css
@@ -392,6 +392,8 @@ form .form-group span.units {
   font-family: inherit;
   color: var(--s2d6-default-color);
   padding: 1ch 0 0;
+  --color-scrollbar: var(--s2d6-default-color);
+  --color-scrollbar-border: var(--s2d6-header-border);
 }
 
 .editor-content strong {
@@ -778,8 +780,6 @@ h2 {
   /*text-align: center;*/
   overflow-wrap: break-word;
   resize: none;
-  scrollbar-width: thin;
-  scrollbar-color: var(--s2d6-default-color);
   height: 16ch;
 }
 
@@ -792,7 +792,6 @@ h2 {
   overflow-wrap: break-word;
   resize: none;
   scrollbar-width: thin;
-  scrollbar-color: var(--s2d6-default-color);
   height: 84%;
   max-width: 100%;
   padding: 0 1ch;
@@ -1571,7 +1570,7 @@ a.actor-notes-tab:hover {
 
 .tab, div{
   scrollbar-width: thin;
-  scrollbar-color: var(--s2d6-default-color);
+  --color-scrollbar: var(--s2d6-default-color);
 }
 
 /*.tab[data-tab].active {
@@ -2336,8 +2335,6 @@ span.total-output {
   /* min-height: 48px; */
   height: 100%;
   width: 100%;
-  scrollbar-width: thin;
-  scrollbar-color: var(--s2d6-default-color);
 }
 
 .ship-hull {
@@ -3998,10 +3995,10 @@ input[type="text"].color {
 }
 
 /* Chrome scrollbar fix */
-* {
+/* * {
   scrollbar-color: var(--s2d6-default-color) var(--color-text-dark-2);
   scrollbar-width: thin;
-}
+}*/
 
 @-moz-document url-prefix() {
   * {
@@ -4092,6 +4089,10 @@ multi-select.select.target-modifier div.tags.input-element-tags {
 }
 
 /*  Battle Sheet */
+.battle {
+  --color-scrollbar: var(--s2d6-battle-color);
+  --s2d6-default-color: var(--s2d6-battle-color);
+}
 .battle-content {
   container-type: inline-size;
   container-name: battle-content;
@@ -4099,16 +4100,13 @@ multi-select.select.target-modifier div.tags.input-element-tags {
 .battle-content-container {
   display: grid;
   grid-template-columns: 24% 24% 48%;
-  grid-template-rows: 15ch 19ch 0.5fr 0.5fr;
+  grid-template-rows: 15ch 20ch 0.5fr 0.5fr;
   grid-template-areas:
     "battle-name-photo battle-status-container battle-damage-container"
     "battle-operations-container battle-defence-container battle-damage-container"
     "battle-weapons-container battle-weapons-container battle-damage-container"
     "battle-positions-container battle-positions-container battle-cargo-container";
   gap: 1%;
-  scrollbar-color: var(--s2d6-battle-color);
-  color: var(--s2d6-battle-color);
-  border-color: var(--s2d6-battle-color);
 }
 
 @container battle-content (width < 500px) {
@@ -4146,7 +4144,7 @@ multi-select.select.target-modifier div.tags.input-element-tags {
 
 .battle-status-container {
   grid-area: battle-status-container;
-  min-height: 9ch;
+  min-height: 12ch;
 }
 
 .battle-damage-container {
@@ -4195,13 +4193,10 @@ li.battle-damage button,  li.battle-weapons button{
 .battle-operations-container, .battle-defence-container, .battle-positions-container, .battle-cargo-container {
   border-style: solid;
   border-radius: 2ch;
-  border-color: var(--s2d6-battle-color);
-  background-color: var(--s2d6-background-nearly-opaque);
-  color: var(--s2d6-battle-color);
   border-width: 2px;
   overflow-y: auto;
   overflow-x: hidden;
-  scrollbar-color: var(--s2d6-battle-color) !important;
+  --color-scrollbar: var(--s2d6-battle-color);
 }
 
 .item-title-battle {
@@ -4269,7 +4264,7 @@ input.red {
 
 .battle-deckplan {
   text-align: center;
-  padding-top: 2ch;
+  padding-top: 1ch;
 }
 
 .battle-positions-container {
